--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 119,
       "metadata": {
         "id": "b_wqbef-5p7B"
       },
@@ -25,8 +25,20 @@
         "import pandas as pd\n",
         "import math\n",
         "import numpy as np\n",
-        "import keras"
+        "import keras\n",
+        "from prettytable import PrettyTable"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table = PrettyTable(['Model', 'Score', 'MSE', 'MAE'])"
+      ],
+      "metadata": {
+        "id": "-_ik54MLsYxB"
+      },
+      "execution_count": 120,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -42,7 +54,7 @@
         "id": "oGZo_pCr6QsU",
         "outputId": "72903f57-25af-4ebc-94d6-f956f8ded82c"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -255,7 +267,7 @@
         "id": "a8ZMzuTQTJpr",
         "outputId": "9012f154-3f69-4e13-8c41-b9d495195fc5"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +301,7 @@
       "metadata": {
         "id": "k_ts4hCfXqp4"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +314,7 @@
       "metadata": {
         "id": "-A14s3P2Hbq3"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -317,7 +329,7 @@
         "id": "97vvzhWPXqla",
         "outputId": "d44cb86c-6e2d-4799-8bec-d335d4b10832"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +354,7 @@
       "metadata": {
         "id": "HgYZ0syfk1Ye"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -362,7 +374,7 @@
         "id": "jR0UVLMqmC4m",
         "outputId": "c76c55c2-b5a6-4fb9-cca9-06c940cbcab4"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +406,7 @@
         "id": "4iVSinDIoG5k",
         "outputId": "13543a5f-f157-49d5-c75f-8ee698a5ac28"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +435,7 @@
         "id": "3wYC8EtmpuRt",
         "outputId": "19184d6d-f11c-473c-d9ce-11db6f15d4f4"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -454,7 +466,7 @@
         "id": "ssCl9qhxr8RM",
         "outputId": "81ec05c3-5f26-45b1-f44a-60c4283f8d13"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +495,7 @@
         "id": "8_DfRXGbsd4e",
         "outputId": "61548bf2-fc4d-49fd-96ff-4b9896488e09"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +526,7 @@
         "id": "RT8Y_5UGs-K_",
         "outputId": "68c4c700-4606-4e93-e5ea-52fe52fdd76e"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +555,7 @@
         "id": "uARZBM_utM2o",
         "outputId": "1aa76bc7-9b46-498e-ee77-3a66d1bab4b4"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +594,7 @@
         "id": "vlKWKfJht9Ps",
         "outputId": "24ff5294-a8f0-4098-b2d0-f39e88106a01"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,7 +623,7 @@
         "id": "WEuTNDn2wP57",
         "outputId": "6c820a0c-32aa-4cbf-9098-461ce46ba385"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +654,7 @@
         "id": "dwV2XmcbxqKW",
         "outputId": "fa2e3e99-a2bf-4d44-ec5e-d5df9a0babc9"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,7 +686,7 @@
         "id": "eZ09-Qc56gFW",
         "outputId": "abc5e95d-4863-49eb-e5b4-7c786b233630"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -698,7 +710,7 @@
       "metadata": {
         "id": "V7r2iWC2ApXg"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -714,7 +726,7 @@
         "id": "QcEhbPrWPt3r",
         "outputId": "89df6b84-7bf7-437b-a2ad-454b1dcad63f"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +750,7 @@
         "id": "tYbvk3mTPwCs",
         "outputId": "1faca31a-d740-4fa5-ca0a-0807f47ff41d"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +782,7 @@
         "id": "nITIU4L6L_Se",
         "outputId": "86a64f15-e4af-47b5-a973-5d0a90b0e5cf"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +806,7 @@
         "id": "m62BjDoyMBee",
         "outputId": "3c62da0f-edfa-4417-c21c-3511c7db1480"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +838,7 @@
         "id": "cXAlGgXZL9kZ",
         "outputId": "3acbc80f-3d52-437f-fc11-2de44dbc9136"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -850,7 +862,7 @@
         "id": "DOcOq21FAtpk",
         "outputId": "067bf5e2-3e28-4d43-c51b-307a50bf85c5"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -882,7 +894,7 @@
         "id": "knkyiCyNRvwZ",
         "outputId": "276541c9-da0c-4f24-f0c5-cfb832721923"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -906,7 +918,7 @@
         "id": "iwzhiaJxRzaU",
         "outputId": "dbaa2279-6295-4718-cc5b-3a45736a00f1"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -938,7 +950,7 @@
         "id": "cykyeNn4SJiW",
         "outputId": "03815a62-4802-4592-a660-84658c5ad05b"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -962,7 +974,7 @@
         "id": "K7fnaycQSNba",
         "outputId": "5a6ff466-224e-45d7-bba1-2183bf91bdaa"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -977,6 +989,42 @@
             "   macro avg       1.00      1.00      1.00    200000\n",
             "weighted avg       1.00      1.00      1.00    200000\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "table.add_row(['Logistic Regression', regressor.score(X_test, y_test), mse_lr, mae_lr])\n",
+        "table.add_row(['Random-Forest', random_forest.score(X_test, y_test), mse_rf, mae_rf])\n",
+        "table.add_row(['Decision Tree', decision_tree.score(X_test, y_test), mse_dt, mae_dt])\n",
+        "table.add_row(['Support Vector Machine', svc.score(X_test, y_test), mse_svc, mae_svc])\n",
+        "table.add_row(['Multi-Layer Perceptron', mlp.score(X_test, y_test), mse_mlp, mae_mlp])\n",
+        "print(table)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hHe6SS-Vs6ON",
+        "outputId": "1920e15a-2bad-4812-be55-8ea5ac9f02d9"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------------------+----------+----------+----------+\n",
+            "|         Model          |  Score   |   MAE    |   MSE    |\n",
+            "+------------------------+----------+----------+----------+\n",
+            "|  Logistic Regression   | 0.959085 | 0.040915 | 0.040915 |\n",
+            "|     Random-Forest      | 0.999965 | 3.5e-05  | 3.5e-05  |\n",
+            "|     Decision Tree      | 0.99997  |  3e-05   |  3e-05   |\n",
+            "| Support Vector Machine | 0.95076  | 0.04924  | 0.04924  |\n",
+            "| Multi-Layer Perceptron | 0.99896  | 0.00104  | 0.00104  |\n",
+            "+------------------------+----------+----------+----------+\n"
           ]
         }
       ]
